@@ -1,4 +1,5 @@
 1.9.1
+* Client: on close save all balances to "balances.db" (for quicker start next time)
 * Client: adding of a new block to block's db is accounted inside the queue time statistics
 * Client: abort saving of UITXO.db before starting to precess a new block
 * Added some protection against nodes sending own IP instead of ours (bitcointalk.org/index.php?topic=1954151.0)
